# Lidar-road-atlas

./: README.md
RoadAtlas-ros/src/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
RoadAtlas-ros/src/LeGO-LOAM/LeGO-LOAM/include/: utility.h
RoadAtlas-ros/src/LeGO-LOAM/LeGO-LOAM/launch/: faster.launch  run.launch  test.rviz
RoadAtlas-ros/src/LeGO-LOAM/LeGO-LOAM/src1/: imageProjection.cpp  mapOptmization_loop_iris.cpp
RoadAtlas-ros/src/LidarAtlas/: CMakeLists.txt  package.xml
RoadAtlas-ros/src/LidarAtlas/launch/: run.launch
RoadAtlas-ros/src/LidarAtlas/src/: LidarAtlas_node.cpp
RoadAtlas-ros/src/LidarAtlas/src/gd/: config.h  ground_detect.cpp  lidarRoadDetect.cpp  lidarRoadDetect.h  map_builder.cpp
RoadAtlas-ros/src/SC-LeGO-LOAM-gd/SC-LeGO-LOAM/LeGO-LOAM/include/: utility.h
RoadAtlas-ros/src/SC-LeGO-LOAM-gd/SC-LeGO-LOAM/LeGO-LOAM/launch/: run.launch
RoadAtlas-ros/src/SC-LeGO-LOAM-gd/SC-LeGO-LOAM/LeGO-LOAM/src/: mapOptmization.cpp
RoadAtlas-ros/src/chunkmap/include/chunkmap/: chunk_map.h
RoadAtlas-ros/src/chunkmap/include/chunkmap_ros/: chunk_map_client.h
RoadAtlas-ros/src/chunkmap/src/chunkmap/: chunk_map.cpp  chunk_map_msgpack_serialise.cpp
RoadAtlas-ros/src/chunkmap/src/chunkmap_ros/: chunk_map_client.cpp
RoadAtlas-ros/src/chunkmap_rviz/ogre_media/materials/glsl120/: chunk_cell.frag
RoadAtlas-ros/src/chunkmap_rviz/src/chunkmap_rviz/: chunkmap_display.cpp
common-localization-framework/: CMakeLists.txt  main.cpp
common-localization-framework/clf/: clf.h  source.cpp
common-localization-framework/data/: data.cpp  data.h
common-localization-framework/gd_method/: method.cpp  method.h
common-localization-framework/gd_method/chunkmap/: chunk_map.cpp  chunk_map.h  chunk_map_msgpack_serialise.cpp
common-localization-framework/gd_method/gd/: ground_detect.h  lidarRoadDetect.h
gd-localization/: CMakeLists.txt  main.cpp  viz.py
gd-localization/chunkmap/LidarIris/: LidarIris.cpp
gd-localization/gd/: config.h  imageKP.cpp  imageKP.hpp  legoFeature.cpp  legoFeature.h  lidarRoadDetect.cpp  map_builder.h
gd-localization/icp/: corr_est.h  corr_est.hpp  flann_multi.h  flann_multi.hpp  icp.h  icp.hpp
gd-noros/: CMakeLists.txt  main.cpp
gd-noros/chunkmap/: chunk_map.h
gd-noros/gd/: ground_detect.cpp  map_builder.cpp  map_builder.h
magnum-chunkmap-viz/: CMakeLists.txt
magnum-chunkmap-viz/corrade/src/Corrade/Containers/: StringStl.h
magnum-chunkmap-viz/magnum-integration/src/Magnum/DartIntegration/Test/urdf/: test_texture.urdf
magnum-chunkmap-viz/magnum/src/Magnum/GL/Test/: AbstractObjectGLTest.cpp
magnum-chunkmap-viz/src/: Application.cpp  CMakeLists.txt  font.h
magnum-chunkmap-viz/src/arc-ball/: ArcBall.cpp  ArcBall.h  ArcBallCamera.h
magnum-chunkmap-viz/src/chunkmap/: chunk_map.cpp  chunk_map.h
magnum-chunkmap-viz/src/imgui-widgets/: imfilebrowser.h
magnum-chunkmap-viz/src/map-object/: MapObject.cpp  MapObject.h  PieceObject.h  PieceShader.cpp  PieceShader.frag  PieceShader.h  PieceShader.vert  resources.conf
